--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "@testing-library/dom": "^10.4.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
@@ -48,7 +47,8 @@
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.10",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "@types/sass": "^1.45.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
