--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^19.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
