--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@types/react-dom": "^19.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "sass": "^1.88.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +53,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.1.4",
+    "@types/react-slick": "^0.23.13",
     "@types/sass": "^1.45.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
