--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
     "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "prettier": "3.4.2",
     "sass": "^1.85.0",
     "typescript-eslint": "^8.20.0"
