Added basic styling to Profile Page

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "sass": "^1.88.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
