--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
+    "@types/react-slick": "^0.23.13",
     "@types/sass": "^1.45.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
