--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.17.0",
     "sass": "^1.88.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^5.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
