Mm 4 mars profile (#22)
Co-authored-by: Alice Barrett <alice.barrett@softwire.com>
Co-authored-by: Hannah Osei <hannah.osei@softwire.com>
Co-authored-by: Winnie Kwok <winnie.kwok@softwire.com>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react-dom": "^19.1.5",
+    "dayjs": "^1.11.13",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
